# pyprofiler

./: .gitignore  README.md  pyproject.toml
pyprofiler/: __init__.py  analyse.py  main.py
